--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "run": "npm run build && node build/index.js",
+    "convert": "yarn run build && node build/main.js",
     "test": "jest"
   },
   "devDependencies": {
